kubernetes/backstage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backstage
  namespace: backstage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backstage
  template:
    metadata:
      labels:
        app: backstage
    spec:
      containers:
        - name: backstage
          image: 024848484634.dkr.ecr.eu-west-1.amazonaws.com/tom-wakhungu/backstage:1.0.12
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7007
